# DeepResearcher

./: .gitignore  README.md  app.py  processed_combined_search_results.json  pyproject.toml  rag_service copy.py  rag_service.py  scraper.py  scrapertest.py  utils.py
oldversback/: rag_service.py  rag_service2.py  scraper.py  scraper3.py  scraper4.py  scraper5.py  scraper6.py  scraper7.py  scraper8.py  scraper9.py
static/css/: style.css
templates/: index.html
